--- a/html_css/box/ensyu.css
+++ b/html_css/box/ensyu.css
@@ -1,7 +1,7 @@
 .box1 {
   width: 300px;
   height: 300px;
-  background-color: red;
+  background-color: black;
   margin: 30px;
   padding: 30px;
 }
