--- a/html_css/caravan/style.css
+++ b/html_css/caravan/style.css
@@ -6,24 +6,32 @@
   箱の大きさはwidth+padding+borderだが、
   これを設定すると、paddingとborderを
   含めたwidthになる */
+  color: #6c6b6b;
 }
 
-.header {
-  width: 100%;  /*横幅いっぱい*/
-  height: 120px;  /*高さ120px*/
-  background-color: red; /*背景red*/
+a {
+  text-decoration: none;
 }
 
-.header-top {
-width: 100%;
-  height: 70px;
-  background-color: hotpink;
+header {
+  width: 90%;
+  padding: 15px 0;
+  margin: 0 auto;
+  text-align: center;
+}
+header .heading {
+  font-size: 32px;
+}
+.nav-list {
+  text-align: center;
+  padding: 10px 0;
+  margin: 0 auto;
 }
 
-.header-bottom {
-  width: 100%;
-  height: 50px;
-  background-color: pink;
+.nav-list-item {
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
 }
 
 .main-visual {
@@ -57,8 +65,14 @@ width: 100%;
   background-color: palegreen;
 }
 
-.footer {
+footer {
   width: 100%;
-  height: 120px;
-  background-color: blue;
+  height: 120px; 
+  text-align: center;
+  line-height: 120px;
+  background-color: #848282;
+}
+
+.footer-text {
+  color: #fff;
 }
